It changes schema and adds init data to DB, dozer`s mapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/exchange
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jspx
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
