--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<java.version>1.8</java.version>
         <apache.tiles.version>3.0.5</apache.tiles.version>
         <guava.version>19.0</guava.version>
-        <dozer.version>5.5.1</dozer.version>
+		<dozer.version>5.0</dozer.version>
 	</properties>
 
 	<dependencies>
@@ -98,11 +98,11 @@
             <artifactId>dozer</artifactId>
             <version>${dozer.version}</version>
         </dependency>
-        <dependency>
-            <groupId>net.sf.dozer</groupId>
-            <artifactId>dozer-spring</artifactId>
-            <version>${dozer.version}</version>
-        </dependency>
+		<!--<dependency>-->
+		<!--<groupId>net.sf.dozer</groupId>-->
+		<!--<artifactId>dozer-spring</artifactId>-->
+		<!--<version>5.5.1</version>-->
+		<!--</dependency>-->
         <dependency>
             <groupId>io.craftsman</groupId>
             <artifactId>dozer-jdk8-support</artifactId>
